hphp/test/slow/parser/php-reserved-name-integer-1.php.expectf
Fatal error: Cannot use 'Integer' as class name as it is reserved in %s/php-reserved-name-integer-1.php on line 6